<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:layout_margin="8dp"
    android:background="@color/light_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/light_background">

        <!-- Tipo de agendamiento -->
        <TextView
            android:id="@+id/tv_tipo_agendamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergencia_titulo"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/vinoTinto" />

        <!-- Fecha -->
        <TextView
            android:id="@+id/tv_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_cita"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp" />

        <!-- Tipo de servicio (más pequeño) -->
        <TextView
            android:id="@+id/tv_tipo_servicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cita_descripcion"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="4dp" />

        <!-- Indicador de toque -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toca_para_ver_detalles"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            android:gravity="end" />

    </LinearLayout>

</androidx.cardview.widget.CardView>